--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanity": "^3.14.5",
+    "sanity-plugin-iframe-pane": "^2.3.1",
     "styled-components": "5.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
