--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "sanity": "^3.14.5",
     "sanity-plugin-iframe-pane": "^2.3.1",
+    "sanity-plugin-vercel-deploy": "^3.3.4",
     "styled-components": "5.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
